fix: fix CSS for code in dark mode

--- a/source/_static/css/piccolo-custom.css
+++ b/source/_static/css/piccolo-custom.css
@@ -34,6 +34,12 @@ code.literal {
   padding-bottom: 0.8px !important;
 }
 
+html[data-mode^="dark"] code.literal {
+  color: rgba(255, 255, 255, 1) !important;
+  background-color: rgba(57, 56, 56, 1) !important;
+  border: 1px solid rgb(187, 187, 187) !important;
+}
+
 /* Improve code blocks display */
 div.highlight {
   background-color: rgba(223, 218, 218, 1);
